# rustploy

./: .bacon.toml  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.monitor  build.rs  docker-compose.monitor.yml  flake.nix  gen_containers.sh  justfile  monitor.db
.direnv/: flake-profile-2-link
auto_route/: CHANGELOG.md  Cargo.toml  README.md
auto_route/examples/: basic.rs
auto_route/src/: lib.rs
auto_route/tests/: controller.rs
auto_route_macros/: CHANGELOG.md  Cargo.toml  README.md
auto_route_macros/src/: lib.rs
auto_socket/: Cargo.toml  README.md
auto_socket/examples/: basic.rs
auto_socket/src/: lib.rs
auto_socket/tests/: registration.rs
auto_socket_macros/: Cargo.toml  README.md
auto_socket_macros/src/: lib.rs
data/: db.sqlite3
db/: atlas.hcl
db/migrations/: 0001_initial.sql  0002_schedule_action.sql  0003_deployment_queue.sql  0004_server_build_limits.sql  0005_deployment_database.sql  0006_rbac_schema.sql  0007_monitoring_grpc_schema.sql  atlas.sum
db/queries/: applications.sql  audit_log.sql  backups.sql  certificates.sql  compose.sql  databases.sql  deployments.sql  domains_patches_mounts.sql  git_providers.sql  groups.sql  network.sql  notifications.sql  organizations.sql  projects.sql  schedules.sql  servers.sql  settings.sql  ssh_keys_registries.sql  users.sql
db/schema/: 003_users.sql  011_servers.sql  017_deployment.sql  022_schedule.sql
proto/: monitoring.proto
rustploy_monitor/: Cargo.toml  build.rs
rustploy_monitor/src/: collector.rs  containers.rs  db.rs  docker.rs  grpc_client.rs  grpc_server.rs  main.rs  monitoring.rs
rustploy_sh_macros/: Cargo.toml  README.md
rustploy_sh_macros/src/: lib.rs  parser.rs
rustploy_sh_macros/src/convert/: dsl.rs  expr.rs  macros.rs  mod.rs  scope.rs  stmt.rs
src/: lib.rs  main.rs
src/api/dto/: application.rs  auth.rs  backup.rs  certificate.rs  compose.rs  database.rs  deployment.rs  destination.rs  domain.rs  environment.rs  mod.rs  monitoring.rs  organization.rs  project.rs  registry.rs  remote_server.rs  schedule.rs  server.rs  ssh_key.rs  swarm.rs
src/api/handlers/: application.rs  auth.rs  backup.rs  certificate.rs  compose.rs  database.rs  deployment.rs  destination.rs  domain.rs  environment.rs  mod.rs  monitoring.rs  organization.rs  project.rs  public.rs  registry.rs  remote_server.rs  schedule.rs  server.rs  ssh_key.rs  swarm.rs
src/api/routes/: mod.rs  routes.rs  socket.rs
src/app/: mod.rs  routes.rs  socket.rs
src/connection/: docker.rs  sqlite.rs
src/core/: mod.rs
src/core/config/: mod.rs
src/core/middleware/: authorization.rs  mod.rs  permission.rs  validator.rs
src/core/state/: mod.rs
src/db/: mod.rs
src/db/connection/: docker.rs  mod.rs  sqlite.rs
src/db/models/: ai_settings.rs  alert_rule.rs  applications.rs  atlas_schema_revisions.rs  audit_logs.rs  backups.rs  bitbucket_providers.rs  certificates.rs  compose_projects.rs  container_metrics.rs  deployments.rs  destinations.rs  domains.rs  environments.rs  git_providers.rs  gitea_providers.rs  github_providers.rs  gitlab_providers.rs  group_policy.rs  groups.rs  health_report.rs  jwt_tokens.rs  libsql_dbs.rs  mariadb_dbs.rs  mod.rs  mongo_dbs.rs  mounts.rs  mysql_dbs.rs  notif_custom.rs  notif_discord.rs  notif_email.rs  notif_gotify.rs  notif_lark.rs  notif_mattermost.rs  notif_ntfy.rs  notif_pushover.rs  notif_resend.rs  notif_slack.rs  notif_teams.rs  notif_telegram.rs  (+27 more)
src/db/repository/: ai_settings.rs  ai_settings_repository.rs  alert_rule.rs  applications_repository.rs  atlas_schema_revisions.rs  atlas_schema_revisions_repository.rs  audit_logs.rs  audit_logs_repository.rs  backups.rs  backups_repository.rs  bitbucket_providers.rs  bitbucket_providers_repository.rs  certificates_repository.rs  compose_projects.rs  compose_projects_repository.rs  container_metrics.rs  container_metrics_repository.rs  deployments_repository.rs  destinations.rs  destinations_repository.rs  domains_repository.rs  environments.rs  environments_repository.rs  git_providers.rs  git_providers_repository.rs  gitea_providers.rs  gitea_providers_repository.rs  github_providers.rs  github_providers_repository.rs  gitlab_providers.rs  gitlab_providers_repository.rs  groups.rs  (+81 more)
src/handlers/: mod.rs  organization.rs
src/logs/: init.rs
src/models/: ai_settings.rs  audit_logs.rs  certificates.rs  compose_projects.rs  domains.rs  environments.rs  group_policy.rs  groups.rs  mod.rs  notif_mattermost.rs  notif_telegram.rs  policy.rs  schedules.rs  server_metrics.rs  servers.rs  settings.rs
src/repository/: ai_settings.rs  ai_settings_repository.rs  applications.rs  applications_repository.rs  atlas_schema_revisions.rs  audit_logs.rs  audit_logs_repository.rs  backups.rs  backups_repository.rs  bitbucket_providers.rs  bitbucket_providers_repository.rs  certificates.rs  certificates_repository.rs  compose_projects.rs  compose_projects_repository.rs  container_metrics.rs  container_metrics_repository.rs  deployments.rs  deployments_repository.rs  destinations.rs  destinations_repository.rs  domains.rs  domains_repository.rs  environments.rs  environments_repository.rs  git_providers.rs  git_providers_repository.rs  gitea_providers.rs  gitea_providers_repository.rs  github_providers.rs  github_providers_repository.rs  gitlab_providers.rs  gitlab_providers_repository.rs  group_policy.rs  group_policy_repository.rs  groups.rs  groups_repository.rs  jwt_tokens.rs  jwt_tokens_repository.rs  libsql.rs  (+76 more)
src/services/: application.rs  auth.rs  certificate.rs  compose.rs  database.rs  deployment.rs  destination.rs  domain.rs  environment.rs  mod.rs  organization.rs  project.rs  registry.rs  remote_server.rs  schedule.rs  ssh_key.rs  user.rs
src/state/: init.rs
src/temp/: mod.rs  testing_route.rs
src/utils/: mod.rs  paths.rs
src/websocket/: terminal.rs
web/rustploy/: .gitignore  AGENTS.md  BACKEND_API_CONTRACT.md  README.md  agent.md  conets.json  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
(+629 files in other folders)
