[package]
name = "rustploy"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "auto_socket_macros",
    "auto_route_macros",
    "auto_socket",
    "auto_route",
]


[dependencies]
tokio = { version = "1",features = ["full"] }
auto-di = "0.6.0"
auto_route = { path = "auto_route" }
auto_socket = { path = "auto_socket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite","macros"] }
dotenv = "0.15.0"
chrono = "0.4.45"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.44"
bollard = "0.21.0"
jsonwebtoken = "10.4.0"
socketioxide = "0.18.4"
git2 = "0.21.0"
toml = "1.1.2"
reqwest = { version = "0.13", features = ["json", "stream"] }
flate2 = "1.1.9"
tar = "0.4.46"
zip = "9.0.0-pre2"
tracing-subscriber = "0.3.23"
uuid = {version = "1.2.2", features = ["v4","serde"] }
bacon = "3.23.0"
aes-gcm = "0.11.0"
dashmap = "6.2.1"
dotenvy = "0.15.7"
envy = "0.4.2"
russh = "0.62.2"
