[package]
name = "rustploy"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "auto_socket_macros",
    "auto_route_macros",
    "auto_socket",
    "auto_route",
]


[dependencies]
tokio = { version = "1", features = ["full"] }
auto-di = "0.6.0"
auto_route = { version = "0.2.1", path = "auto_route" }
auto_socket = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
serde_json = "1.0"
serde_yaml = "0.9"
validator = { version = "0.20", features = ["derive"] }
axum = "0.8.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
sqlx-gen = { version = "0.5.8", default-features = false }
chrono = "0.4.45"
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
tracing = "0.1.44"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
socketioxide = "0.18.4"
tracing-subscriber = "0.3.23"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
dashmap = "6.2.1"
dotenvy = "0.15.7"
russh-extra = { version = "0.1.7", default-features = false, features = ["full"] }
poem-openapi = "5.1.16"
tower-http = { version = "0.7", features = ["cors"] }
tower = { version = "0.5.3", features = ["full"] }
futures = "0.3.32"
thiserror = "2.0.18"
tempfile = "3.27.0"
minijinja = "2.21.0"
tokio-util = "0.7.11"
tokio-cron-scheduler = "0.13"
paste = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }

[profile.release]
opt-level = "z"        # size ke liye optimize (speed ke liye "3" use karo)
lto = true             # Link Time Optimization — dead code remove karta hai
codegen-units = 1      # better optimization, slow compile
panic = "abort"        # unwinding code hata deta hai
strip = true           # debug symbols binary se remove karta hai
