[package]
name = "auto_route"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Spring-style automatic Axum routing for auto-di managed controllers"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/auto_route"
keywords = ["axum", "routing", "dependency-injection", "proc-macro"]
categories = ["web-programming", "asynchronous"]

[dependencies]
auto-di = "0.6.0"
auto_route_macros = { version = "0.2.0", path = "../auto_route_macros" }
axum = "0.8.9"
inventory = "0.3.24"

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
