[package]
name = "rustploy_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
sysinfo = "0.33.1"
reqwest = { version = "0.13.4", features = ["json"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
tonic = "0.12.3"
prost = "0.13.5"
http = "1.1"
axum = { version = "0.8.9", features = ["macros"] }
